--- a/GE.WebAdmin/Views/SeoInfo/Edit.cshtml
+++ b/GE.WebAdmin/Views/SeoInfo/Edit.cshtml
@@ -29,22 +29,7 @@
     <br />
     @Html.Partial(MVC.SeoInfo.Views._GeneralEdit)
     <br />
-    <div class="col-md-12">
-        <div class="row">
-            @if (Model.Id != 0)
-            {
-                <!--keywords-->
-                <div id="menu-@Model.Id">
-                    @Html.Partial(MVC.SeoKeywords.Views._SeoKeywords, new VMSeoKeywordList { SeoInfoId = Model.Id, Keywords = Model.Keywords })
-                </div>
-                <!--keywords-->}
-            else
-            {
-                <p class="text-muted"><i class="fa fa-info"></i> Редактирование ключевых слов доступно только только при наличии отслеживаемой страницы в базе данных.</p>
-            }
-        </div>
-    </div>
-    <br />
+
     <div class="row">
         <div class="col-md-12">
             <div class="form-group">
@@ -54,3 +39,10 @@
         </div>
     </div>
 </form>
+
+<div id="seo-kw">
+    @if (!isNew)
+    {
+        @Html.Action(MVC.SeoKeywords.Index(seoInfoId: Model.Id))
+    }
+</div>
