--- a/GE.WebAdmin/Views/MaterialTags/_GridView.cshtml
+++ b/GE.WebAdmin/Views/MaterialTags/_GridView.cshtml
@@ -11,6 +11,20 @@
 <blockquote>
     Теги должны содержать основные слова, которые могут содержаться в облаке тегов сайта.
 </blockquote>
+@using (Ajax.BeginForm(MVC.MaterialTags.Edit(), new AjaxOptions { HttpMethod = "post", UpdateTargetId = "tags-cloud" }))
+{
+    @Html.AntiForgeryToken()
+    <input type="hidden" id="MaterialId" name="MaterialId" value="@mid" autocomplete="off" />
+    <input type="hidden" id="ModelCoreType" name="ModelCoreType" value="@mct" autocomplete="off" />
+    <label for="Value">Новый тег облака</label>
+    <div class="input-group">
+        <input type="text" id="Id" name="Id" class="form-control" placeholder="Введите значение тега" autocomplete="off" />
+        <span class="input-group-btn">
+            <button class="btn btn-default" type="submit">Добавить</button>
+        </span>
+    </div>
+}
+<br />
 @Html.SxGridView(
         new SxExtantions.SxGridViewSettings<VMMaterialTag>
         {
@@ -26,8 +40,8 @@
             KeyFieldsName = new string[] { "Id", "MaterialId", "ModelCoreType" },
             EnableEditing = false,
             EnableDelete = true,
+            EnableCreate = false,
             DeleteLink = Url.Action(MVC.MaterialTags.Delete()),
-            CreateLink = Url.Action(MVC.MaterialTags.Edit(mid: mid, mct: mct)),
             PagerLink=string.Format("/materialtags/index?mid={0}&mct={1}", mid, mct)
         },
         new { @class = "table table-condensed table-bordered table-responsive table-striped" }
