--- a/GE.WebAdmin/Views/Articles/_GridView.cshtml
+++ b/GE.WebAdmin/Views/Articles/_GridView.cshtml
@@ -14,7 +14,9 @@
         Columns = new SxExtantions.SxGridViewColumn[]{
             new SxExtantions.SxGridViewColumn{FieldName="DateCreate", Caption="Дата создания"},
             new SxExtantions.SxGridViewColumn{FieldName="Title", Caption="Заголовок"},
-            new SxExtantions.SxGridViewColumn{FieldName="SeoInfoId", Caption="Инфо", Template=(si)=> { return si==null?"<span class=\"text-danger\">не заданы seo-теги</span>":null; } },
+            new SxExtantions.SxGridViewColumn{FieldName="SeoInfoId", Caption="Инфо", Template=(si)=> {
+                return si==null? "<i class=\"text-danger\">не заданы теги seo</i>":null;
+            } },
         },
         Filter = filter,
         SortDirections = sortDirections
