--- a/GE.WebUI/Views/Shared/_SocialIconsMenu.cshtml
+++ b/GE.WebUI/Views/Shared/_SocialIconsMenu.cshtml
@@ -3,7 +3,7 @@
 }
 <ul class="icons">
     <li>
-        <a href="#"><span class="fa fa-facebook"></span></a>
+        <a href="https://www.facebook.com/groups/792476727555167/"><span class="fa fa-facebook"></span></a>
     </li>
     <li>
         <a href="#"><span class="fa fa-twitter"></span></a>
@@ -15,6 +15,6 @@
         <a href="#"><span class="fa fa-youtube-play"></span></a>
     </li>
     <li>
-        <a href="#"><span class="fa fa-vk"></span></a>
+        <a href="https://vk.com/panda_online_game_news"><span class="fa fa-vk"></span></a>
     </li>
 </ul>
