--- a/GE.WebAdmin/Views/Home/Index.cshtml
+++ b/GE.WebAdmin/Views/Home/Index.cshtml
@@ -2,4 +2,12 @@
     ViewBag.Title = "Index";
 }
 
-<h3>Добро пожаловать на борт <span class="text-primary">@Constants.AppName</span>,<br /> @User.Identity.Name !</h3>
+<h3>Добро пожаловать на борт <span class="text-primary">@Constants.AppName</span>, @User.Identity.Name !</h3>
+<br />
+<div class="row">
+    <div class="col-md-6">
+        <h4><strong>Последние комментарии к материалам</strong></h4>
+        @Html.Action(MVC.Home.LastComments())
+    </div>
+    <div class="col-md-6"></div>
+</div>
