--- a/GE.WebUI/Views/News/Details.cshtml
+++ b/GE.WebUI/Views/News/Details.cshtml
@@ -22,7 +22,10 @@
         }
         @Html.Raw(Model.Html)
         @Html.Partial(MVC.Shared.Views._SocNetButtons)
+        @Html.Action(MVC.MaterialTags.List(mid: Model.Id, mct: Model.ModelCoreType, maxFs: 30))
+        @Html.Action("likematerials", new { controller="news", materialId=Model.Id, modelCoreType=Model.ModelCoreType})
     </div>
+    
     <div class="m-info">
         <div class="row">
             <div class="col-md-6">
