--- a/GE.WebAdmin/Views/Menues/_GridView.cshtml
+++ b/GE.WebAdmin/Views/Menues/_GridView.cshtml
@@ -1,6 +1,7 @@
 ﻿@model VMMenu[]
 @{
     Layout = null;
+    var pagerInfo = ViewBag.PagerInfo;
     var filter = ViewBag.Filter != null ? (VMMenu)ViewBag.Filter : null;
     var sortDirections = ViewBag.Order != null ? (Dictionary<string, SxExtantions.SortDirection>)ViewBag.Order : null;
 }
@@ -15,6 +16,7 @@
             new SxExtantions.SxGridViewColumn{FieldName="Name", Caption="Наименование"},
             new SxExtantions.SxGridViewColumn{FieldName="Id", Caption="Идентификатор"}
         },
+        PagerInfo=pagerInfo,
         Filter = filter,
         SortDirections = sortDirections
     },
