--- a/GE.WebAdmin/Views/Request/_GridView.cshtml
+++ b/GE.WebAdmin/Views/Request/_GridView.cshtml
@@ -1,6 +1,7 @@
 ﻿@model VMRequest[]
 @{
     Layout = null;
+    var pagerInfo = ViewBag.PagerInfo;
     var filter = ViewBag.Filter != null ? (VMRequest)ViewBag.Filter : null;
     var sortDirections = ViewBag.Order != null ? (Dictionary<string, SxExtantions.SortDirection>)ViewBag.Order : null;
 }
@@ -25,10 +26,11 @@
             }},
             new SxExtantions.SxGridViewColumn{FieldName="RawUrl", Caption="Целевой адрес"}
         },
+            PagerInfo= pagerInfo,
             Filter = filter,
             SortDirections = sortDirections,
             EnableEditing = false,
             EnableCreate = false
-    },
+        },
             new { @class = "table table-condensed table-bordered table-responsive table-striped" }
     )
