--- a/GE.WebAdmin/Views/ClickTypes/_GridView.cshtml
+++ b/GE.WebAdmin/Views/ClickTypes/_GridView.cshtml
@@ -1,6 +1,7 @@
 ﻿@model VMClickType[]
 @{
     Layout = null;
+    var pagerInfo = ViewBag.PagerInfo;
     var filter = ViewBag.Filter != null ? (VMClickType)ViewBag.Filter : null;
     var sortDirections = ViewBag.Order != null ? (Dictionary<string, SxExtantions.SortDirection>)ViewBag.Order : null;
 }
@@ -8,16 +9,17 @@
 
 @Html.SxGridView(
                 new SxExtantions.SxGridViewSettings<VMClickType>
-    {
-        UpdateTargetId = "grid-click-types",
-        Data = Model,
-        Columns = new SxExtantions.SxGridViewColumn[]{
+                {
+                    UpdateTargetId = "grid-click-types",
+                    Data = Model,
+                    Columns = new SxExtantions.SxGridViewColumn[]{
             new SxExtantions.SxGridViewColumn{FieldName="Id", Caption="Идентификатор"},
             new SxExtantions.SxGridViewColumn{FieldName="Name", Caption="Наименование"},
             new SxExtantions.SxGridViewColumn{FieldName="Description", Caption="Описание"}
         },
-        Filter = filter,
-        SortDirections = sortDirections
-    },
+                    PagerInfo = pagerInfo,
+                    Filter = filter,
+                    SortDirections = sortDirections
+                },
         new { @class = "table table-condensed table-bordered table-responsive table-striped" }
     )
