--- a/GE.WebUI/Content/less/like-mats.less
+++ b/GE.WebUI/Content/less/like-mats.less
@@ -1,11 +1,85 @@
-﻿
+﻿@import (reference) "colors.less";
+@import (reference) "sizes.less";
+@import (reference) "positioned.less";
+@import (reference) "../../bower_components/bootstrap/less/variables.less";
 
-.like-mats > ul {
-    list-style: none;
-    padding: 0;
-    margin: 0;
+.like-mats .like-mat {
+    font-size: 14px;
+    height: 100%;
+    display: inline-table;
+    background-color: #f5f5f5;
+    padding: 10px 10px 30px;
+    width: 100%;
+    position: relative;
+
+    @media (max-width: @screen-xs-max) {
+        display: block;
+        height: auto;
+        margin-bottom: @def-pad*2;
+    }
+
+    @media (min-width: @screen-sm-min) and (max-width: @screen-sm-max) {
+    }
+
+    @media (min-width: @screen-md-min) and (max-width: @screen-md-max) {
+    }
+
+    @media (min-width: @screen-lg-min) {
+    }
 }
 
-.like-mats > ul a {
+.like-mats .like-mat a {
+    font-size: 18px;
+    color: @color-dark-blue;
+    font-weight: 700;
+    line-height: 1;
+    display: block;
+    margin: 10px 0;
+}
 
+.like-mats .like-mat .author{
+    position:absolute;
+    bottom:0;
+    left:0;
+    padding: 0 10px 10px;
+}
+
+.like-mats .row {
+    display: table;
+    margin-bottom: @def-pad*2;
+
+    @media (max-width: @screen-xs-max) {
+        display: block;
+        margin-bottom: 0;
+    }
+
+    @media (min-width: @screen-sm-min) and (max-width: @screen-sm-max) {
+    }
+
+    @media (min-width: @screen-md-min) and (max-width: @screen-md-max) {
+    }
+
+    @media (min-width: @screen-lg-min) {
+    }
+}
+
+.like-mats .row > div {
+    display: table-cell;
+float: none;
+vertical-align: top;
+height: 100%;
+
+    @media (max-width: @screen-xs-max) {
+        display: inline-block;
+        float: left;
+    }
+
+    @media (min-width: @screen-sm-min) and (max-width: @screen-sm-max) {
+    }
+
+    @media (min-width: @screen-md-min) and (max-width: @screen-md-max) {
+    }
+
+    @media (min-width: @screen-lg-min) {
+    }
 }
