--- a/GE.WebUI/Views/Shared/_LikeMaterial.cshtml
+++ b/GE.WebUI/Views/Shared/_LikeMaterial.cshtml
@@ -1,33 +1,54 @@
 ﻿@model dynamic[]
 @{
     Layout = null;
+    var colCount = 3;
+    var rowsCount = (int)Math.Ceiling((decimal)Model.Length / colCount);
 }
 
 @if (Model.Any())
 {
     <div class="like-mats">
         <h3>Похожие материалы</h3>
-        <ul>
-            @for (int i = 0; i < Model.Length; i++)
-            {
-                var item = Model[i];
-                var date = (DateTime)item.DateCreate;
-                var mct = (SX.WebCore.Enums.ModelCoreType)item.ModelCoreType;
-                var titleUrl = (string)item.TitleUrl;
-                string url = "#";
-                switch (mct)
+        <br />
+        @for (int r = 0; r < rowsCount; r++)
                 {
-                    case SX.WebCore.Enums.ModelCoreType.Article:
-                        url = Url.Action(MVC.Articles.Details(date.Year, date.Month.ToString("00"), date.Day.ToString("00"), titleUrl));
-                        break;
-                    case SX.WebCore.Enums.ModelCoreType.News:
-                        url = Url.Action(MVC.News.Details(date.Year, date.Month.ToString("00"), date.Day.ToString("00"), titleUrl));
-                        break;
+                    var items = Model.Skip(r * colCount).Take(colCount).ToArray();
+            <div class="row">
+                @for (int c = 0; c < colCount; c++)
+                {
+                    if (c< items.Length)
+                    {
+                        var item = items[c];
+                        var date = (DateTime)item.DateCreate;
+                        var mct = (SX.WebCore.Enums.ModelCoreType)item.ModelCoreType;
+                        var titleUrl = (string)item.TitleUrl;
+                        string url = "#";
+                        switch (mct)
+                        {
+                            case SX.WebCore.Enums.ModelCoreType.Article:
+                                url = Url.Action(MVC.Articles.Details(date.Year, date.Month.ToString("00"), date.Day.ToString("00"), titleUrl));
+                                break;
+                            case SX.WebCore.Enums.ModelCoreType.News:
+                                url = Url.Action(MVC.News.Details(date.Year, date.Month.ToString("00"), date.Day.ToString("00"), titleUrl));
+                                break;
+                        }
+                        <div class="col-md-4">
+                            <div class="like-mat">
+                                <div><time>@item.DateCreate</time></div>
+                                <div><a href="@url">@item.Title</a></div>
+                                <p>@item.Foreword</p>
+                                <div class="author">
+                                    Автор: <strong><i>@item.User.NikName</i></strong>
+                                </div>
+                            </div>
+                        </div>
+                    }
+                    else
+                    {
+                        <div class="col-md-4"></div>
+                    }
                 }
-                <li>
-                    <a href="@url" title="@item.Title">@item.Title</a>
-                </li>
-            }
-        </ul>
+            </div>
+        }
     </div>
 }
